--- a/css/style.css
+++ b/css/style.css
@@ -94,14 +94,45 @@
 }
 .podhod-right {
     flex: 50%;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
-.podhod-right__analiz {
+.podhod-right__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 6.8px;
+}
+
+.podhod-right-top__left {
+}
+.podhod-right-top__right {
+    display: flex;
+    justify-content: space-between;
 }
 
 .podhod-right__polosa {
+    width: 100%;
+    height: 10px;
+    border-radius: 4px;
+    background: rgba(206, 206, 206, 0.40);
 }
+
 .podhod-right__polosaActive {
+    border-radius: 4px;
+    background: #36187D;
+    width: 92%;
+    height: 10px;
+}
+
+
+.reklama-active {
+    width: 71%;
+}
+
+.SEO-active {
+    width: 53%;
 }
 
 /* ==============================podhod END============================ */
